--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lint": "eslint src/. test/. --config .eslintrc.json --fix",
     "dev": "nodemon src/",
     "start": "node src/",
-    "mocha": "mocha test/ --recursive --exit"
+    "clean": "shx rm -rf test/data/",
+    "mocha": "npm run clean && NODE_ENV=test mocha test/ --recursive --exit"
   },
   "standard": {
     "env": [
@@ -57,6 +58,7 @@
     "axios": "^0.25.0",
     "eslint": "^7.32.0",
     "mocha": "^8.4.0",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "shx": "^0.3.4"
   }
 }
